--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-session": "^1.17.3",
     "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
+    "memorystore": "^1.6.7",
     "mongodb": "^4.7.0",
     "mongosh": "^1.5.0",
     "morgan": "~1.9.1",
